Fixed Z-Index Bug for Navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,7 +19,7 @@
     font-size: 1.2rem;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 1001;
 }
 
 .navbar-container {
@@ -89,7 +89,7 @@
 }
 
 .nav-link:hover {
-    border-bottom: 6px solid var(--quint);
+    border-bottom: 6px solid var(--white);
     opacity: 0.8;
     font-weight: 600;
     transition: all 0.2s ease-out;
